# stri

./: Cargo.toml  LICENSE
stri/: Cargo.toml  README.md
stri/src/: interpolate.rs  lib.rs  macro.rs
stri/src/interpolator/: mod.rs
stri/src/interpolator/interpolator/: mod.rs  owned.rs  refr.rs
stri/src/interpolator/to_interpolator/: interpolators.rs  mod.rs
stri/src/interpolator/to_interpolator/impls/: mod.rs  str.rs
stri/src/interpolator/to_interpolator/impls/sql/: auxs.rs  impl_chrono.rs  impl_rust_decimal.rs  mod.rs  sanitizer.rs  sanitizers.rs
stri/src/interpolator/to_interpolator/impls/str/: impl_chrono.rs  impl_rust_decimal.rs  mod.rs
stri/tests/: example.sql  example.txt  readme_example.rs
stri/tests/sqls/: 1_insert.sql  2_delete.sql
stri/tests/txts/: 2-age.txt
stri_proc/: Cargo.toml  README.md
stri_proc/src/: format.rs  lib.rs  parts.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/tests/: file_proc.rs
tests/tests/file_proc/: file.sql
