[package]
name = "stri"
description = "string interpolation procedural macro"
version = "0.2.0"
edition = "2024"
authors = ["Marwan Hilal <marwan.hilal.dev@gmail.com>"]
license-file = "LICENSE"
rust-version = "1.85"
repository = "https://github.com/infinite-xdev-void/stri"
keywords = ["str", "interpolation", "text", "format", "sql"]
categories = ["template-engine", "value-formatting", "text-processing"]


[dependencies]
stri_proc = { version = "0.1.0" }
chrono = { version = "0.4", optional = true }

[features]
default = ["chrono"]
